--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,14 @@
 
 body {
     display: flex;
-
+    padding: 20px;
     justify-content: center;
 }
 
 .header {
     display: grid;
     grid-template-columns: 70% 15% 15%;
-    padding: 30px;
+    padding: 20px;
     gap: 10px;
 }
 
@@ -37,6 +37,37 @@ a:hover {
     border-top: 2px #0065FC solid;
     color: #0065FC;
 }
+
+.search {
+    display: flex;
+    width: 377px;
+    height: 49px;
+    align-items: center;
+    gap: 24px; 
+    border-radius: 15px;
+    border: 1px solid var(--grey, #F2F2F2);
+    background: var(--white, #FFF); 
+}
+
+.searchButton {
+    display: flex;
+    height: 49px;
+    padding: 15px 16px;
+    align-items: center;
+    gap: 10px; 
+    border-radius: 0px 15px 15px 0px;
+    border: 1px solid var(--blue, #0065FC);
+    background: var(--blue, #0065FC);
+    color: white;
+}
+
+.searchTerm {
+    width: 100%;
+    border: none;
+    border-right: none;
+    padding: 5px;
+    outline: none;
+  }
 
 .main-container {
     width: 100%;
