maj barre de recherche

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ a:hover {
     border-radius: 15px;
     border: 1px solid var(--grey, #F2F2F2);
     background: var(--white, #FFF); 
+    padding: 20px;
 }
 
 .searchButton {
