--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     gap: 35px; 
     align-self: stretch; 
     margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 a {
@@ -175,6 +176,71 @@ h2 {
     width: 65%;
 }
 
+.hebergements-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hebergements-cards {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: space-around;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+
+.hebergements-cards .card {
+    width: 30%;
+    display: flex;
+    margin-top: 33px;
+    flex-direction: column;
+}
+
+.hebergements-cards img {
+    width: 100%;
+    height: 124px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.hebergements-cards .card-content {
+    width: 67%;
+    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.hebergements-cards .card-title {
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
+
+.hebergements-cards .card-subtitle {
+    margin: 0;
+}
+
+.hebergements-cards .card-rating {
+    margin-bottom: 5px;
+}
+
+.hebergements-cards a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.hebergements-cards a:hover {
+    border-top: none;
+    color: #0065FC;
+}
+
 /****** Populaires ***********/
 .populaires {
     width: 32%;
@@ -220,8 +286,58 @@ h2 {
     margin-bottom: 5px;
 }
 
+/****** Activités ***********/
+.activities {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 20px;
+    padding: 30px;
+    flex-direction: column;
+}
 
+.activities-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.activites-cards {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: space-around;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+
+.activites-cards .card {
+    width: 22%;
+    display: flex;
+    margin-top: 33px;
+    flex-direction: column;
+}
+
+.activites-cards img {
+    height: 380px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.activites-cards .card-content {
+    width: 67%;
+    padding-left: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.activites-cards .card-title {
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
