--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,8 @@ h2 {
     display: flex;
     margin-top: 33px;
     flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 .hebergements-cards img {
@@ -211,8 +213,6 @@ h2 {
     padding-left: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
 }
 
 .hebergements-cards .card-title {
@@ -239,6 +239,12 @@ h2 {
 .hebergements-cards a:hover {
     border-top: none;
     color: #0065FC;
+}
+
+.hebergements-cards .afficherPlus {
+    align-self: flex-end;
+    margin-top: 10px;
+    flex-direction: column;
 }
 
 /****** Populaires ***********/
@@ -331,6 +337,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     box-sizing: border-box;
 }
 
