--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
     margin-bottom: 20px;
 }
 
-h2 {
+.topPage h2 {
     margin-bottom: -40px;
 }
 
@@ -361,6 +361,30 @@ h2 {
 .activites-cards .card-title {
     margin-top: 10px;
     margin-bottom: 4px;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    align-self: stretch;
+    background: #F2F2F2;
+}
+
+.navfooter {
+    display: flex;
+    margin-right: 200px;
+}
+
+.navfooter a {
+    display: flex;
+    text-decoration: none;
+    color: black;
+    padding-bottom: 10px;
+}
+
+.navfooter li {
+    list-style-type: none;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
