--- a/css/style.css
+++ b/css/style.css
@@ -16,48 +16,64 @@
 body {
     display: flex;
     justify-content: center;
-    margin: 30px;
+    margin: 0;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    margin-bottom: 30px;
 }
 
 .header nav {
     display: flex;
     justify-content: space-between;
+    padding-left: 25px;
+    padding-right: 25px;
+    gap: 68px;
 }
 
 .header a {
+    font-family: Raleway;
+    font-size: 16px; 
     display: flex;
     text-decoration: none;
     color: black;
-    margin-left: 50px;
+    padding-top: 19px;
 } 
 
 .header a:hover {
-    border-top: 2px var(--main-color) solid;
+    border-top: 2px #0065FC solid;
     color: #0065FC;
 }
 
 .header img {
     display: flex;
+    padding: 30px;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 61.09px;
+    height: 19px;
 }
 
 .topPage {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 35px; 
-    align-self: stretch; 
-    margin-top: 10px;
-    margin-bottom: 20px;
+    font-size: 16px;
+    text-decoration: none;
+    gap: 35px;
 }
 
-.topPage h2 {
-    margin-bottom: -40px;
+.toptitle {
+    margin: 0;
+    font-size: 22px;
+}
+
+.toppage-title p {
+    font-size: 16px;
+    text-decoration: none;
+    margin-top: 10px;
 }
 
 .search {
@@ -70,7 +86,6 @@ body {
     border: 1px solid var(--grey, #F2F2F2);
     background: var(--white, #FFF);
 }
-
 
 .searchLogo {
     background-color: var(--grey, #F2F2F2);
@@ -90,6 +105,10 @@ body {
     color: white;
 }
 
+.searchButton2 {
+    display: none;
+}
+
 .searchTerm {
     width: 100%;
     border: none;
@@ -97,13 +116,18 @@ body {
     outline: none;
   }
 
-  .Filters {
+.Filters {
     display: flex;
-    align-items: center;
     gap: 15px; 
-    font-weight: bold;
+}
+
+.filtersTitle {
     font-size: 18px;
-    flex-wrap: wrap;
+}
+
+.filtersButtons {
+    display: flex;
+    gap: 15px;
 }
 
 .filtersButton {
@@ -113,7 +137,7 @@ body {
     align-items: center;
     gap: 10px; 
     font-weight: bold;
-    font-size: 20px;
+    font-size: 17px;
     border-radius: 25px;
     border: 2px solid var(--grey-tint-2, #D9D9D9);
     background-color: white;
@@ -125,21 +149,18 @@ body {
 
 .infos {
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
 }
 
 .infos .infoButton {
-    display:inline-block;
     border: 1px solid var(--grey-tint-2, #D9D9D9);
     margin:2px;
-    font-size:12px;
     width:24px;
     height:24px;
     border-radius: 50%;
     background-color: white;
     gap: 10px;
     margin-right: 10px;
+    flex-shrink: 0;
 }
 
 .infos p {
@@ -150,9 +171,13 @@ body {
 .main-container {
     width: 100%;
     max-width: 1440px;
-    padding: 0 50px;
     box-sizing: border-box;
 }
+
+main {
+    padding: 0 50px;
+}
+
 
 .section-title {
     margin: 0;
@@ -186,6 +211,7 @@ body {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    margin-top: 35px;
 }
 
 .hebergements-and-populaires section {
@@ -204,25 +230,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .hebergements-cards {
-    width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: space-around;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 25px;
+    gap: 30px;
 }
 
 .hebergements-cards .card {
-    width: 30%;
+    width: 29%;
     display: flex;
-    margin-top: 33px;
     flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
 }
 
 .hebergements-cards img {
@@ -233,10 +254,12 @@ body {
 }
 
 .hebergements-cards .card-content {
-    width: 67%;
+    width: 100%;
     padding-left: 15px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 .hebergements-cards .card-title {
@@ -255,20 +278,19 @@ body {
 .hebergements-cards a {
     text-decoration: none;
     color: black;
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
 }
 
-.hebergements-cards a:hover {
-    border-top: none;
-    color: #0065FC;
-}
-
-.hebergements-cards .afficherPlus {
-    align-self: flex-end;
-    margin-top: 10px;
+.afficherPlus {
+    display: flex;
+    margin-top: 30px;
     flex-direction: column;
+}
+
+.afficherPlus a {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 /****** Populaires ***********/
@@ -284,7 +306,8 @@ body {
 
 .populaires-cards .card {
     display: flex;
-    margin-top: 33px;
+    margin-top: 30px;
+    cursor: pointer;
 }
 
 .populaires-cards img {
@@ -316,87 +339,97 @@ body {
     margin-bottom: 5px;
 }
 
+.populaires-cards a {
+    text-decoration: none;
+    color: black;
+}
+
 /****** Activités ***********/
 .activities {
-    width: 100%;
     display: flex;
-    justify-content: space-between;
-    border-radius: 20px;
-    padding: 30px;
     flex-direction: column;
+    margin: 30px;
+    padding-bottom: 35px;
 }
 
 .activities-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 22px;
+    margin-bottom: 30px;
 }
 
 .activites-cards {
-    width: 100%;
     display: flex;
-    flex-direction: row;
-    align-items: space-around;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 25px;
+    gap: 30px;
+}
+
+.activites-cards a {
+    text-decoration: none;
+    color: black;
+    flex-basis: 23%;
 }
 
 .activites-cards .card {
-    width: 22%;
+    width: 100%;
     display: flex;
-    margin-top: 33px;
     flex-direction: column;
 }
 
 .activites-cards img {
+    width: 100%;
     height: 380px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 
 .activites-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
     box-sizing: border-box;
+    padding: 0px 19px;
 }
 
 .activites-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+    font-size: 16px;
+}
+
+.activites-cards a {
+    text-decoration: none;
+    color: black;
 }
 
 footer {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    align-self: stretch;
-    background: #F2F2F2;
-    flex-wrap: wrap;
+    padding: 0px 50px;
 }
 
-.navfooter {
+.navFooter {
     display: flex;
-    margin-right: 250px;
+    justify-content: center;
+    background-color: var(--main-bg-color);
+    box-sizing: border-box;
+    margin-top: 35px;
+    padding: 20px;
 }
+  
+.column {
+    width: 33.33%;
+    float: left;
+    box-sizing: border-box;
+}
+  
+.column h3 {
+    margin-top: 0;
+}
+  
+.column p {
+    margin-bottom: 0;
 
-.navfooter a {
-    display: flex;
+}
+.column a {
     text-decoration: none;
     color: black;
-    padding-bottom: 10px;
-}
-
-.navfooter li {
-    list-style-type: none;
-}
-
-.navfooter ul {
-    padding-left: 0;
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -404,6 +437,21 @@ footer {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+
+    .header img {
+        padding: 30px 50px;
+    }
+
+    .header nav {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    .Filters {
+        display: flex;
+        flex-direction: column;
+    }
+
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -415,6 +463,7 @@ footer {
     .populaires {
         width: 100%;
         margin-top: 50px;
+        margin-bottom: 30px;
     }
 
     .populaires-cards {
@@ -427,6 +476,10 @@ footer {
         width: 30%;
     }
 
+    .populaires-cards img {
+        height: 146px;
+    }
+
     .populaires-cards .card-title {
         font-size: 14px;
     }
@@ -434,9 +487,167 @@ footer {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    .activites-cards img {
+        height: 200px;
+    }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
-    /* ... */
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header nav {
+        width: 100%;
+        flex-direction: row;
+        gap: 0;
+    }
+
+    .header .navButton {
+        width: 50%;
+    }
+
+    .header a {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 15px;
+        border-bottom: 2px #F2F2F2 solid;
+    }
+
+    .header a:hover {
+        border-top: 0px;
+        border-bottom: 2px #0065FC solid;
+    }
+
+    .topPage {
+        padding: 0px 20px 0px 20px;
+    }
+
+    .search {
+        width: 100%;
+    }
+
+    .searchButton {
+        display: none;
+    }
+
+    .searchButton2 {
+        display: flex;
+        height: 49px;
+        padding: 15px 16px;
+        align-items: center;
+        gap: 10px; 
+        border-radius: 15px;
+        border: 1px solid var(--main-color);
+        background: var(--main-color);
+        color: white;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .filtersButtons {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .filtersButton {
+        flex-basis: 45%;
+        font-size: 14px;
+    }
+
+    main {
+        padding: 0;
+    }
+
+    .hebergements-and-populaires section {
+        border-radius: 0;
+        padding: 0;
+        margin: 0;
+    }
+
+    .hebergements-and-populaires {
+        flex-direction: column-reverse;
+    }
+
+    .hebergements-and-populaires .hebergements {
+        background-color: transparent;
+      }
+
+    .populaires-title {
+        padding: 30px 20px 0px 20px;
+    }
+
+    .populaires-cards {
+        flex-direction: column;
+        padding: 0px 20px 0px 20px;
+        margin-bottom: 30px;
+    }
+
+    .populaires-cards .card {
+        width: 97%;
+        margin-top: 15px;
+    }
+
+    .hebergements-title {
+        margin-top: 20px;
+        background-color: white;
+        padding: 20px 20px 0px 20px;
+        margin-bottom: 15px;
+    }
+
+    .hebergements-cards {
+        flex-direction: column;
+        padding: 0px 30px 0px 20px;
+        gap: 15px;
+    }
+
+    .hebergements-cards .card {
+        width: 100%;
+    }
+
+    .hebergements-cards img {
+        width: 100%;
+        height: 124px;
+    }
+
+    .afficherPlus {
+        padding: 0px 20px 0px 25px;
+        margin-top: 15px;
+    }
+
+    .activities {
+        margin: 0;
+        margin-top: 35px;
+    }
+
+    .activities-title {
+        margin-top: 35px;
+        padding: 30px 30px 0px 30px;
+    }
+
+    .activites-cards {
+        flex-direction: column;
+        padding: 0px 30px 0px 25px;
+        gap: 15px;
+    }
+
+    .activites-cards img {
+        height: 141px;
+    }
+
+    footer {
+        padding: 0;
+    }
+
+    .navFooter {
+        flex-direction: column;
+        gap: 50px;
+        padding: 30px;
+    }
+
+    .column {
+        width: 100%;
+    }
 }
